Fixed z-index issue of Header

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -36,6 +36,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 1;
   color: #212121;
   background-color: #ffeb3b;
   padding: 0.5rem;
@@ -190,7 +191,7 @@ section.landing-half div.landing-lower {
 
 span.badge {
   display: inline-block;
-  background-color: #000;
+  background-color: #424242;
   font-size: 1.25rem;
   -webkit-box-shadow: 3px 3px 5px rgba(1, 1, 1, 0.3);
           box-shadow: 3px 3px 5px rgba(1, 1, 1, 0.3);
